--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
+    <link rel="manifest" href="imagens/site.webmanifest">
+
     <title>Portfólio</title>
 </head>
 
 <body>
+
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="imagens/developer.jpg" alt="">
+            </div>
+            <banner class="banner">
+                <h1>Web Developer & Front End Designer</h1>
+                <p>Kauã Maximino</p>
+                <button>Saiba mais</button>
+            </banner>
+        </header>
+
+    </div>
 
 </body>
 
